@@ -1,5 +1,6 @@
 de.xwic.cube.webui.samples/web_root/WEB-INF/*.log.?
 de.xwic.cube.webui.samples/web_root/WEB-INF/sessions
 de.xwic.cube/data
+de.xwic.etlgine/_build
 de.xwic.etlgine/doc
 de.xwic.etlgine/server/web/WEB-INF/*.log.?
